--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.17.0",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "path": "^0.12.7",
