--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
